--- a/npcs/primo.yaml
+++ b/npcs/primo.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -330,6 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: artists_guild
       name: Artists' Guild
       role: The Order of Kiaransalee
@@ -461,26 +462,45 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:       
-    - Elf Abilities:
-      - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
-        Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        Keen Senses: You have proficiency in the Perception skill 
-        Trance: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
-                dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
-        Elf Weapon Training: You have proficiency with the Longsword, Shortsword, Shortbow, and Longbow 
-        Cantrip: Can cast Prestidigitation. Intelligence is your Spellcasting Ability for it        
+    saving-throws:
+    - Dexterity
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
+    skills:
+    - Artist
+    proficiencies:
+    - Perception   
+    - Persuasion
+    - Painter's Tools
+    - Calligrapher's Tools
+    - Woodcarver's Tools
+  special-abilities:      
+  - title: Elf Abilities
+  - abilities: 
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+    - title: Elf Weapon Training
+    - content: You have proficiency with the Longsword, Shortsword, Shortbow, and Longbow 
+    - title: Cantrip
+    - content: Can cast Prestidigitation. Intelligence is your Spellcasting Ability for it        
 
-    special-abilities:
-       - Proficiencies: Persuasion, Performance, Painter's tools, Calligrapher's tools, Woodcarver's tools
-       - Feats: N/A
+  - title: Attacks
+  - content: 1 attack with unarmed strike
+  - title: Combat Tactics
+  - content: He's a coward and will always avoid combat, albeit with some regal excuse.
 
-    attacks: |
-      1 attack with unarmed strike
-    combat-tactics: |
-      He's a coward and will always avoid combat, albeit with some regal excuse.
-    special-equipment:
-       - Art Supplies
 
   profile:
 
